# termux-desk

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  run.sh
examples/: minimal.py
termux_desk/: __init__.py  __main__.py  cli.py  server.py  tunnel.py  viewer.html
tests/: test_cli.py  test_server.py  test_tunnel.py
