[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "termux-desk"
version = "0.1.0"
description = "A web-based remote desktop for Termux and PRoot X11 environments"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "TermuxDesk contributors" }]
keywords = ["termux", "remote-desktop", "x11", "websocket", "proot", "vnc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Networking",
]
dependencies = [
  "aiohttp>=3.9",
  "Pillow>=10.0",
  "python-xlib>=0.33",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5.0",
]

[project.scripts]
termux-desk = "termux_desk.cli:main"

[project.urls]
Homepage = "https://github.com/YBeeTeam/termux-desk"
Repository = "https://github.com/YBeeTeam/termux-desk"
Issues = "https://github.com/YBeeTeam/termux-desk/issues"

[tool.setuptools]
include-package-data = true
packages = ["termux_desk"]

[tool.setuptools.package-data]
termux_desk = ["viewer.html"]
